--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -10,22 +11,55 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/hello_txt"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent=".1"
+        android:text="응애응애"
+        app:autoSizeTextType="uniform"
+        android:autoSizeMaxTextSize="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/banner_view"/>
 
+    <com.zhpan.bannerview.BannerViewPager
+        android:id="@+id/banner_view"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_185"
+        android:layout_marginTop="@dimen/dp_16"
+        app:bvp_indicator_slide_mode="worm"
+        app:bvp_indicator_style="circle"
+        app:bvp_indicator_checked_color="@color/lblue30"
+        app:bvp_indicator_normal_color="@color/egray30"
+        app:bvp_indicator_visibility="visible"
+        app:bvp_page_style="multi_page"
+        app:layout_constraintTop_toBottomOf="@id/hello_txt"
+        app:layout_constraintBottom_toTopOf="@id/type_txt"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/type_txt"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent=".1"
+        android:text="응애응애"
+        app:autoSizeTextType="uniform"
+        android:autoSizeMaxTextSize="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/banner_view"
+        app:layout_constraintBottom_toBottomOf="@id/recycler_view"
         />
 
 
-
-    <com.example.moeidbannerlibrary.banner.BannerLayout
-        android:id="@+id/Banner"
+    <com.ramotion.garlandview.TailRecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
-        app:autoPlaying="true"
-        app:centerScale="1.6"
-        app:itemSpace="0"
-        app:moveSpeed="0.5"
-        app:showIndicator="true"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:layout_height="0dp"
+        app:layout_constraintHeight_percent=".1"
+        android:clipChildren="false"
+        app:layout_constraintTop_toBottomOf="@id/type_txt"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
