--- a/app/src/main/res/drawable/default_background_rounded_rect.xml
+++ b/app/src/main/res/drawable/default_background_rounded_rect.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="#ffffff" />
-    <corners android:radius="15dp" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="@android:color/transparent" />
+    <stroke android:width="2dp" android:color="@color/lblue60" />
+    <corners android:radius="20dp" />
 </shape>
