--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -99,8 +99,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="4dp"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="2dp"
+                android:backgroundTint="@color/lblue60"
                 app:cardUseCompatPadding="true"
                 app:contentPadding="12dp">
 
@@ -124,7 +125,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lexend_deca"
                             android:text="Primium"
-                            android:textColor="#3C3C3C"
+                            android:textColor="@color/lgray10"
                             android:textSize="16sp" />
 
                         <ImageView
@@ -142,8 +143,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="4dp"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="2dp"
+                app:cardBackgroundColor="@color/lblue60"
                 app:cardUseCompatPadding="true"
                 app:contentPadding="12dp">
 
@@ -166,7 +168,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lexend_deca"
                             android:text="Auction"
-                            android:textColor="#3C3C3C"
+                            android:textColor="@color/lgray10"
                             android:textSize="16sp" />
 
                         <ImageView
@@ -184,8 +186,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="4dp"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="2dp"
+                app:cardBackgroundColor="@color/lblue60"
                 app:cardUseCompatPadding="true"
                 app:contentPadding="12dp">
 
@@ -208,7 +211,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lexend_deca"
                             android:text="Outlet"
-                            android:textColor="#3C3C3C"
+                            android:textColor="@color/lgray10"
                             android:textSize="16sp" />
 
                         <ImageView
@@ -226,8 +229,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="4dp"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="2dp"
+                app:cardBackgroundColor="@color/lblue60"
                 app:cardUseCompatPadding="true"
                 app:contentPadding="12dp">
 
@@ -250,7 +254,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/lexend_deca"
                             android:text="Package"
-                            android:textColor="#3C3C3C"
+                            android:textColor="@color/lgray10"
                             android:textSize="16sp" />
 
                         <ImageView
@@ -296,7 +300,6 @@
         android:id="@+id/today_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/default_background_rounded_rect"
         android:clipChildren="true"
         android:clipToPadding="true"
         android:paddingTop="10dp"
@@ -304,7 +307,7 @@
         android:paddingBottom="10dp"
         android:layout_marginBottom="300dp"
         app:layout_constraintTop_toBottomOf="@id/today_txt"
-        tools:listitem="@layout/item_home_today_list"/>
+        tools:listitem="@layout/item_product_list"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
