--- a/app/src/main/res/layout/item_home_banner_model.xml
+++ b/app/src/main/res/layout/item_home_banner_model.xml
@@ -11,7 +11,8 @@
       android:layout_marginTop="10dp"
       android:layout_marginHorizontal="10dp"
       android:layout_marginBottom="30dp"
-      app:cardElevation="3dp"
+      app:cardElevation="2dp"
+      app:cardBackgroundColor="@color/lblue10"
       app:cardCornerRadius="20dp">
     <TextView
         android:layout_width="match_parent"
