--- a/app/src/main/res/layout/item_product_list.xml
+++ b/app/src/main/res/layout/item_product_list.xml
@@ -19,25 +19,41 @@ too. layout_gravity="center_horizontal" is a lot simpler.
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <androidx.cardview.widget.CardView
+
+        <com.google.android.material.card.MaterialCardView
             android:id="@+id/cardview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:orientation="vertical"
-            app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="10dp"
-            app:cardElevation="5dp"
+            app:cardElevation="0dp"
             app:cardMaxElevation="0dp"
+            app:strokeColor="@color/lblue60"
+            app:cardBackgroundColor="@android:color/transparent"
+            app:strokeWidth="1dp"
             tools:layout_marginLeft="20dp"
             tools:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp">
+            <com.varunest.sparkbutton.SparkButton
+                android:id="@+id/spark_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:sparkbutton_activeImage="@drawable/ic_heart_on"
+                app:sparkbutton_iconSize="@dimen/dp_15"
+                app:sparkbutton_inActiveImage="@drawable/ic_heart_off"
+                android:layout_gravity="right"
+
+                android:layout_marginTop="@dimen/dp_8"
+                app:sparkbutton_primaryColor="@color/lmint10"
+                app:sparkbutton_secondaryColor="@color/lblue30" />
 
             <FrameLayout
                 android:id="@+id/card_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
 
                 <!--
                 scale_container is used to scale down the item when the scale down
@@ -47,27 +63,26 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                 <RelativeLayout
                     android:id="@+id/scale_container"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:paddingLeft="@dimen/list_item_horizontal_padding"
                     android:paddingTop="@dimen/list_item_vertical_padding"
                     android:paddingRight="@dimen/list_item_horizontal_padding"
                     android:paddingBottom="@dimen/list_item_vertical_padding">
 
-                    <ImageView
-                        android:id="@+id/chevron"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignTop="@+id/prd_auction_type"
-                        android:layout_alignBottom="@+id/prd_totseqNm"
-                        android:layout_marginEnd="16dp"
-                        app:srcCompat="@drawable/ic_round_keyboard_arrow_left_24"
-                        app:tint="@color/lblue60" />
+<!--                    <ImageView-->
+<!--                        android:id="@+id/chevron"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_alignTop="@+id/prd_auction_type"-->
+<!--                        android:layout_alignBottom="@+id/prd_totseqNm"-->
+<!--                        android:layout_marginEnd="16dp"-->
+<!--                        app:srcCompat="@drawable/ic_round_keyboard_arrow_left_24"-->
+<!--                        app:tint="@color/lblue60" />-->
 
                     <TextView
                         android:id="@+id/prd_auction_type"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_toEndOf="@id/chevron"
                         android:fontFamily="@font/lexend_deca"
                         android:text="Primium"
                         android:textSize="13dp" />
@@ -78,7 +93,6 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                         android:layout_height="wrap_content"
                         android:layout_below="@id/prd_auction_type"
                         android:layout_marginTop="8dp"
-                        android:layout_toEndOf="@id/chevron"
                         android:fontFamily="@font/lexend_deca"
                         android:text="@{prdlist.prdTotClsSeqNm}"
                         android:textSize="10dp" />
@@ -89,6 +103,7 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                         android:layout_height="wrap_content"
                         android:layout_alignTop="@+id/prd_auction_type"
                         android:layout_alignParentRight="true"
+                        android:layout_marginRight="@dimen/dp_15"
                         android:text="진행중"
                         android:textSize="10dp" />
 
@@ -98,8 +113,11 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                         android:layout_height="wrap_content"
                         android:layout_below="@id/prd_auction_type"
                         android:layout_alignParentRight="true"
+                        android:layout_marginRight="@dimen/dp_15"
                         android:text="10:00:00"
                         android:textSize="10dp" />
+
+
 
                     <LinearLayout
                         android:id="@+id/expand_view"
@@ -271,13 +289,14 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                             </LinearLayout>
                         </LinearLayout>
 
-
-
-
-
                     </LinearLayout>
+
                 </RelativeLayout>
+
+
             </FrameLayout>
-        </androidx.cardview.widget.CardView>
+
+        </com.google.android.material.card.MaterialCardView>
+
     </FrameLayout>
 </layout>
