--- a/app/src/main/res/menu/tabs.xml
+++ b/app/src/main/res/menu/tabs.xml
@@ -4,16 +4,24 @@
         android:icon="@drawable/icons8_home150"
         android:title="Home"
         android:enabled="true" />
+
     <item
-        android:id="@+id/tab_like"
-        android:icon="@drawable/ic_heart_115"
-        android:title="Like"
+        android:id="@+id/tab_list"
+        android:icon="@drawable/ic_icons8_uncheck_all_500"
+        android:title="List"
         android:enabled="true" />
     <item
         android:id="@+id/tab_cart"
         android:icon="@drawable/shopping_cart"
         android:title="Cart"
         android:enabled="true" />
+
+    <item
+        android:id="@+id/tab_like"
+        android:icon="@drawable/ic_heart_115"
+        android:title="Like"
+        android:enabled="true" />
+
     <item
         android:id="@+id/tab_mypage"
         android:icon="@drawable/ic_my_home_page_1"
