--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -50,7 +50,7 @@
         android:paddingBottom="10dp"
         android:layout_marginBottom="300dp"
         app:layout_constraintTop_toBottomOf="@id/my_favorite_txt"
-        tools:listitem="@layout/item_product_list"/>
+        tools:listitem="@layout/item_cart_list"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
