--- a/app/src/main/res/layout/item_cart_list.xml
+++ b/app/src/main/res/layout/item_cart_list.xml
@@ -94,8 +94,8 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignTop="@+id/prd_auction_type"
-                        android:layout_alignParentRight="true"
                         android:layout_alignRight="@id/auc_bid"
+                        android:layout_alignParentRight="true"
                         android:layout_marginTop="5dp"
                         android:layout_marginRight="@dimen/dp_30"
                         android:fontFamily="@font/nanum_barun_gothic"
@@ -112,7 +112,7 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                         android:layout_alignParentRight="true"
                         android:layout_marginRight="@dimen/dp_30"
                         android:fontFamily="@font/lexend_deca"
-                        android:text="@{prdlist.bidPrice + `₩ / KG`}"
+                        android:text="@{prdlist.bidPrice.toString()+ `₩ / KG`}"
                         android:textSize="12dp" />
 
 
