--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -9,8 +9,8 @@
 
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="0dp"
-        android:layout_height="0dp">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_left"
@@ -62,40 +62,38 @@
             app:layout_constraintTop_toBottomOf="@id/my_cart_txt" />
 
 
-        <com.airbnb.lottie.LottieAnimationView
-            android:id="@+id/lottie_img"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+<!--        <com.airbnb.lottie.LottieAnimationView-->
+<!--            android:id="@+id/lottie_img"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
 
-            android:scaleType="fitCenter"
-            android:visibility="gone"
-            app:layout_constraintBottom_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/guideline_right"
+<!--            android:scaleType="fitCenter"-->
+<!--            app:layout_constraintBottom_toTopOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="@id/guideline_right"-->
 
-            app:layout_constraintStart_toStartOf="@id/guideline_left"
-            app:layout_constraintTop_toBottomOf="parent"
-            app:lottie_autoPlay="true"
-            app:lottie_loop="true"
-            app:lottie_rawRes="@raw/lottie_card_presents" />
+<!--            app:layout_constraintStart_toStartOf="@id/guideline_left"-->
+<!--            app:layout_constraintTop_toBottomOf="parent"-->
+<!--            app:lottie_autoPlay="true"-->
+<!--            app:lottie_loop="true"-->
+<!--            app:lottie_rawRes="@raw/lottie_card_presents" />-->
 
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/sad_txt"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/dp_5"
-            android:fontFamily="@font/nanum_barun_gothic"
-            android:text="장바구니가 텅 비었어요.."
-            android:textAlignment="center"
-            android:textColor="@color/egray60"
-            android:textSize="@dimen/dp_15"
-            android:visibility="gone"
-            app:autoSizeMaxTextSize="20sp"
-            app:autoSizeMinTextSize="12sp"
-            app:autoSizeTextType="uniform"
-            app:layout_constraintEnd_toEndOf="@id/guideline_right"
-            app:layout_constraintStart_toStartOf="@id/guideline_left"
-            app:layout_constraintTop_toBottomOf="@id/lottie_img" />
+<!--        <androidx.appcompat.widget.AppCompatTextView-->
+<!--            android:id="@+id/sad_txt"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="@dimen/dp_5"-->
+<!--            android:fontFamily="@font/nanum_barun_gothic"-->
+<!--            android:text="장바구니가 텅 비었어요.."-->
+<!--            android:textAlignment="center"-->
+<!--            android:textColor="@color/egray60"-->
+<!--            android:textSize="@dimen/dp_15"-->
+<!--            app:autoSizeMaxTextSize="20sp"-->
+<!--            app:autoSizeMinTextSize="12sp"-->
+<!--            app:autoSizeTextType="uniform"-->
+<!--            app:layout_constraintEnd_toEndOf="@id/guideline_right"-->
+<!--            app:layout_constraintStart_toStartOf="@id/guideline_left"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/lottie_img" />-->
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/my_buy_txt"
@@ -146,7 +144,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_20"
             android:fontFamily="@font/lexend_deca"
-            android:text="참여중인 경매"
+            android:text="경매 참여 내역"
             android:textColor="@color/egray80"
             android:textSize="@dimen/dp_28"
             android:textStyle="bold"
@@ -164,7 +162,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_5"
             android:fontFamily="@font/nanum_barun_gothic"
-            android:text="내가 참여했던 경매 중 아직 진행중인 경매입니다."
+            android:text="내가 참여했던 모든 경매들이에요."
             android:textColor="@color/egray60"
             android:textSize="@dimen/dp_12"
             app:autoSizeMaxTextSize="28sp"
@@ -186,6 +184,7 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintTop_toBottomOf="@id/bid_txt_desc"
             tools:listitem="@layout/item_cart_list" />
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
