--- a/app/src/main/res/layout/item_cart_list.xml
+++ b/app/src/main/res/layout/item_cart_list.xml
@@ -74,20 +74,37 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                     <!--                        app:srcCompat="@drawable/ic_round_keyboard_arrow_left_24"-->
                     <!--                        app:tint="@color/lblue60" />-->
 
+
+                    <ImageView
+                        android:id="@+id/status_img"
+                        android:layout_width="40dp"
+                        android:layout_height="wrap_content"
+                        android:layout_alignTop="@id/prd_auction_type"
+                        android:layout_alignBottom="@id/prd_totseqNm"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/android_icon" />
+
                     <TextView
                         android:id="@+id/prd_auction_type"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/dp_20"
+                        android:layout_toRightOf="@id/status_img"
                         android:fontFamily="@font/nanum_barun_gothic"
                         android:text="프리미엄"
-                        android:textSize="15dp" />
+                        android:textColor="@color/egray80"
+                        android:textSize="15dp"
+
+                        />
 
                     <TextView
                         android:id="@+id/prd_totseqNm"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/prd_auction_type"
+                        android:layout_marginLeft="@dimen/dp_20"
                         android:layout_marginTop="5dp"
+                        android:layout_toRightOf="@id/status_img"
                         android:fontFamily="@font/nanum_barun_gothic"
                         android:text="주무뇌"
                         android:textSize="12dp" />
@@ -100,24 +117,22 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                         android:layout_alignTop="@+id/prd_auction_type"
                         android:layout_alignRight="@id/auc_bid"
                         android:layout_alignParentRight="true"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginRight="@dimen/dp_30"
                         android:fontFamily="@font/nanum_barun_gothic"
                         android:text="현재 최고 입찰가"
-                        android:textSize="12dp" />
+                        android:textSize="10dp" />
 
                     <TextView
                         android:id="@+id/auc_bid"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/prd_auction_type"
-                        android:layout_alignTop="@id/prd_totseqNm"
+                        android:layout_below="@id/auc_bid_txt"
                         android:layout_alignBottom="@id/prd_totseqNm"
                         android:layout_alignParentRight="true"
-                        android:layout_marginRight="@dimen/dp_30"
                         android:fontFamily="@font/lexend_deca"
-                        android:text="@{prdlist.bidPrice.toString()+ `₩ / KG`}"
-                        android:textSize="12dp" />
+                        android:text="12,000"
+                        android:textColor="@color/egray80"
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
 
 
                     <LinearLayout
@@ -125,7 +140,7 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/prd_totseqNm"
-                        android:layout_alignStart="@id/prd_auction_type"
+                        android:layout_alignStart="@id/status_img"
                         android:layout_marginTop="20dp"
                         android:dividerPadding="1dp"
                         android:orientation="vertical"
